// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NuVsEntry /> should render collapsed when [in=false] 1`] = `
<div
  className="list-group-item spaced hoverable"
  onClick={[Function]}
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
    >
      <strong>
        Sequence 
        4
      </strong>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
    >
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <small
          className="text-muted text-strong"
        >
          LENGTH
        </small>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          pad={true}
          shrink={1}
        >
          <strong>
            13
          </strong>
        </FlexItem>
      </Flex>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
    >
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <small
          className="text-muted text-strong"
        >
          E-VALUE
        </small>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          pad={true}
          shrink={1}
        >
          <strong>
            3
          </strong>
        </FlexItem>
      </Flex>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
    >
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <small
          className="text-muted text-strong"
        >
          ORFS
        </small>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={1}
          pad={true}
          shrink={1}
        >
          <strong>
            0
          </strong>
        </FlexItem>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          pad={true}
          shrink={1}
        />
      </Flex>
    </Col>
  </Row>
</div>
`;

exports[`<NuVsEntry /> should render collapsed when [in=false] 2`] = `
<div
  className="list-group-item spaced"
  onClick={null}
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
    >
      <strong>
        Sequence 
        4
      </strong>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
    >
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <small
          className="text-muted text-strong"
        >
          LENGTH
        </small>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          pad={true}
          shrink={1}
        >
          <strong>
            13
          </strong>
        </FlexItem>
      </Flex>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
    >
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <small
          className="text-muted text-strong"
        >
          E-VALUE
        </small>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          pad={true}
          shrink={1}
        >
          <strong>
            3
          </strong>
        </FlexItem>
      </Flex>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
    >
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <small
          className="text-muted text-strong"
        >
          ORFS
        </small>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={1}
          pad={true}
          shrink={1}
        >
          <strong>
            0
          </strong>
        </FlexItem>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          pad={true}
          shrink={1}
        >
          <FlexItem
            alignSelf={null}
            basis="auto"
            grow={0}
            shrink={0}
          >
            <button
              className="close"
              onClick={[Function]}
              type="button"
            >
              <span>
                ×
              </span>
            </button>
          </FlexItem>
        </FlexItem>
      </Flex>
    </Col>
  </Row>
</div>
`;

exports[`<NuVsEntry /> should render expanded when [in=true] 1`] = `
<div
  className="list-group-item spaced"
  onClick={null}
>
  <Row
    bsClass="row"
    componentClass="div"
  >
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
    >
      <strong>
        Sequence 
        4
      </strong>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
    >
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <small
          className="text-muted text-strong"
        >
          LENGTH
        </small>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          pad={true}
          shrink={1}
        >
          <strong>
            13
          </strong>
        </FlexItem>
      </Flex>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
    >
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <small
          className="text-muted text-strong"
        >
          E-VALUE
        </small>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          pad={true}
          shrink={1}
        >
          <strong>
            3
          </strong>
        </FlexItem>
      </Flex>
    </Col>
    <Col
      bsClass="col"
      componentClass="div"
      md={3}
    >
      <Flex
        alignContent="stretch"
        alignItems="center"
        direction="row"
        justifyContent="flex-start"
        wrap="nowrap"
      >
        <small
          className="text-muted text-strong"
        >
          ORFS
        </small>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={1}
          pad={true}
          shrink={1}
        >
          <strong>
            0
          </strong>
        </FlexItem>
        <FlexItem
          alignSelf={null}
          basis="auto"
          grow={0}
          pad={true}
          shrink={1}
        >
          <FlexItem
            alignSelf={null}
            basis="auto"
            grow={0}
            shrink={0}
          >
            <button
              className="close"
              onClick={[Function]}
              type="button"
            >
              <span>
                ×
              </span>
            </button>
          </FlexItem>
        </FlexItem>
      </Flex>
    </Col>
  </Row>
</div>
`;
